--- a/package.json
+++ b/package.json
@@ -1,35 +1,30 @@
 {
-  "name": "wasivispokedex",
-  "version": "1.0.0",
-  "description": "",
-  "keywords": [],
-  "main": "src/index.js",
-  "homepage": "https://wasivis.github.io/pokedex/",
-  "private": false,
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "6.1.2",
-    "@fortawesome/free-brands-svg-icons": "6.1.1",
-    "@fortawesome/free-solid-svg-icons": "6.1.2",
-    "@fortawesome/react-fontawesome": "0.1.18",
-    "@types/react": "18.0.21",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-scripts": "4.0.0"
-  },
-  "devDependencies": {
-    "@babel/runtime": "7.13.8",
-    "typescript": "4.1.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+	"name": "wasivispokedex",
+	"version": "1.0.0",
+	"description": "",
+	"keywords": [],
+	"main": "src/index.js",
+	"homepage": "https://wasivis.github.io/pokedex/",
+	"private": false,
+	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "6.1.2",
+		"@fortawesome/free-brands-svg-icons": "6.1.1",
+		"@fortawesome/free-solid-svg-icons": "6.1.2",
+		"@fortawesome/react-fontawesome": "0.1.18",
+		"@types/react": "18.0.21",
+		"react": "18.0.0",
+		"react-dom": "18.0.0",
+		"react-scripts": "4.0.0"
+	},
+	"devDependencies": {
+		"@babel/runtime": "7.13.8",
+		"typescript": "4.1.3"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test --env=jsdom",
+		"eject": "react-scripts eject"
+	},
+	"browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
 }
