--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@fortawesome/free-solid-svg-icons": "6.1.2",
 		"@fortawesome/react-fontawesome": "0.1.18",
 		"@types/react": "18.0.21",
+		"gh-pages": "4.0.0",
 		"react": "18.0.0",
 		"react-dom": "18.0.0",
 		"react-scripts": "4.0.0"
@@ -24,7 +25,9 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test --env=jsdom",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build"
 	},
 	"browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
 }
