--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
 	"description": "",
 	"keywords": [],
 	"main": "src/index.js",
-	"private": false,
 	"dependencies": {
 		"@fortawesome/fontawesome-svg-core": "6.1.2",
 		"@fortawesome/free-brands-svg-icons": "6.1.1",
@@ -23,9 +22,7 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test --env=jsdom",
-		"eject": "react-scripts eject",
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build"
+		"eject": "react-scripts eject"
 	},
 	"browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
 }
